--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	   <div class="col-md-6">
       <h1>Summary : Latitude vs. X</h1>
 	    <img src="Fig1.png" width="500px">
-	    <p>The purpose of this project was to analyze how weather changes as you get closer to the equater. To accomplish this analysis. we first pulled data from the OpenWeatherMapAPI to assemble a dataset on over 500 cities.</p>
+	    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis. we first pulled data from the OpenWeatherMapAPI to assemble a dataset on over 500 cities.</p>
 	    <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included:temperature, cloudiness, windspeed, and humidity. This site provides the source data and visualizations created as part of the analysis,as well as explanations and descriptions of any trends and correlations witnessed.</p> 
      </div>
 	   <div class="col-md-5 sidebar">
